fix: student module 관련 오류 수정
